added grid for memeory gallery

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css"
     />
+    <meta
+      name="google-site-verification"
+      content="GiR9N--sAlIknpEpPJ3ltWU5UzuUPpiUbqp_U3o0n0s"
+    />
   </head>
   <body>
     <div id="root"></div>
