Fix: added few changes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css"
     />
+    <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css" />
     <meta
       name="google-site-verification"
       content="GiR9N--sAlIknpEpPJ3ltWU5UzuUPpiUbqp_U3o0n0s"
