--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/android-chrome-512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Madhuraj Photography</title>
+    <title>Celebration Chapeters</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css"
@@ -14,6 +14,9 @@
       name="google-site-verification"
       content="PciObAIFUSMiTGLcBy3MXo0biGXph8pe1bP7uW5g6jc"
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Celebration Chapters" />
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" /> -->
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
