update: og title

--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Celebration Chapters" />
+    <meta
+      property="og:title"
+      content="Celebration Chapters - Films & Photos for Your Special Moments"
+    />
+    <meta
+      property="og:description"
+      content="Capture your most cherished moments with Celebration Chapters. Explore our stunning photos and heartfelt films today!"
+    />
+    <meta property="og:url" content="https://www.celebrationchapters.com/" />
+    <meta
+      property="og:image"
+      content="https://images.ctfassets.net/waibrswxyq0p/3RdXYtqHGWLEGox3EM7fLQ/50aa517250d9da1819f6c43f9bea7a1f/CCP-343.jpg"
+    />
+    <meta
+      property="og:image:alt"
+      content="A stunning celebration captured by Celebration Chapters"
+    />
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" /> -->
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
